Changelog
=========

1.5.1 (unreleased)
------------------

- Nothing changed yet.


1.5.0 (2014-09-13)
------------------

- Integate new fc.qemu package instead of instrumenting a complicated
  init script.

- Restart firewall in case of changed config files.


1.4.1 (2014-09-09)
------------------

- Let Nagios configure contacts for technical contacts of resource groups, too.


1.4.0 (2014-08-22)
------------------

- Clean outdated RBD snapshots (#13414).


1.3.6 (2014-08-21)
------------------

- Bugfix: the actual config file we pass to qemu is the shell-expanded one in
  /run/kvm.*.cfg. The last refactoring accidentally pointed it to the template
  in /etc/kvm/.


1.3.5 (2014-08-21)
------------------

* Do not try to inmigrate VMs that should be running and *are* running already.

* Adapt test setup to py.test after moving to separate repository and
  get all tests green.

* Extract computation of tmp and swap volumes from init script so we can test
  them and make them more robust for migration.