@@ -38,12 +38,10 @@ system configuration.
             'localconfig-ceph-pools = gocept.net.configure.ceph:pools',
             'localconfig-dhcpd = gocept.net.configure.dhcpd:main',
             'localconfig-iptables-inputrules = gocept.net.configure.iptables:inputrules',
-            'localconfig-kvm-disks = gocept.net.configure.kvm:resize_disks',
             'localconfig-kvm-init = gocept.net.configure.kvm:ensure_vms',
             'localconfig-nagioscontacts = gocept.net.configure.nagios:contacts',
             'localconfig-postfix-master = gocept.net.configure.postfix:master',
             'localconfig-puppetmaster = gocept.net.configure.puppetmaster:main',
-            'localconfig-resize2fs-vmroot = gocept.net.configure.resize2fs:check_grow',
             'localconfig-users = gocept.net.configure.users:main',
             'localconfig-zones = gocept.net.configure.zones:update',
             'redundancy-groups = gocept.net.directory:redundancy_groups',
